srv/ensino/SMU29009/grupo1/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smu29009-g1
  name: smu29009-g1
spec:
  externalIPs:
    - "191.36.8.1"
    - "191.36.8.4"
    - "191.36.8.6"
    - "191.36.8.25"
  ports:
    - name: http1
      port: 1338
      protocol: TCP
      targetPort: 1337
  selector:
    app: smu29009-g1
  type: LoadBalancer
